--- a/general.css
+++ b/general.css
@@ -28,5 +28,5 @@
 body {
   padding: 0;
   margin: 0;
-  font-family: "Inter-Regular", sans-serif;
+  font-family: "Inter-Regular";
 }/*# sourceMappingURL=general.css.map */
