--- a/general.scss
+++ b/general.scss
@@ -40,7 +40,7 @@ $gray: #ececec;
 body{
     padding: 0;
     margin: 0;
-    font-family: "Inter-Regular", sans-serif;
+    font-family: "Inter-Regular";
 }
 %main {
     padding: 0 calcFluid(0, 100, 1024, 1920);
