--- a/gallary/galary.css
+++ b/gallary/galary.css
@@ -70,6 +70,7 @@ main {
   margin: 0;
   text-decoration: none;
   color: black;
+  cursor: pointer;
 }
 .gallary__item .card .card__bag {
   cursor: pointer;
@@ -88,6 +89,7 @@ main {
   color: black;
 }
 .gallary__item .card .card__img {
+  cursor: pointer;
   width: 100%;
   margin: auto 0 0 0;
 }
@@ -97,6 +99,7 @@ main {
   font-weight: 900;
   text-decoration: none;
   color: black;
+  cursor: pointer;
 }
 .gallary__item .card .fd-row .star {
   font-size: calc( 0.0049180328 * 100vw + 10.5573770492px );
