--- a/general.scss
+++ b/general.scss
@@ -156,6 +156,7 @@ body{
         margin: 0;
         text-decoration: none;
         color: black;
+        cursor: pointer;
     }
     .card__bag{
         cursor: pointer;
@@ -174,6 +175,7 @@ body{
         color: black;
     }
     .card__img{
+        cursor: pointer;
         width: 100%;
         margin: auto 0 0 0;
     }
@@ -185,6 +187,7 @@ body{
             font-weight: 900;
             text-decoration: none;
             color: black;
+            cursor: pointer;
         }
         .star{
             font-size:  calcFluid(14, 20, 700, 1920);
