--- a/main/main.css
+++ b/main/main.css
@@ -115,6 +115,7 @@ main {
   margin: 0;
   text-decoration: none;
   color: black;
+  cursor: pointer;
 }
 .card .card__bag {
   cursor: pointer;
@@ -133,6 +134,7 @@ main {
   color: black;
 }
 .card .card__img {
+  cursor: pointer;
   width: 100%;
   margin: auto 0 0 0;
 }
@@ -142,6 +144,7 @@ main {
   font-weight: 900;
   text-decoration: none;
   color: black;
+  cursor: pointer;
 }
 .card .fd-row .star {
   font-size: calc( 0.0049180328 * 100vw + 10.5573770492px );
