--- a/footer/footer.css
+++ b/footer/footer.css
@@ -67,7 +67,12 @@ body {
   -webkit-text-fill-color: transparent;
   color: #5134c4;
   font-family: "fouore";
-  font-size: calc( 0.00625 * 100vw + 28px );
+  font-size: calc( 0.009375 * 100vw + 27px );
+}
+.basement__content .d-col .basement__logo span {
+  -webkit-text-fill-color: black;
+  color: black;
+  font-size: calc( 0.00375 * 100vw + 10.8px );
 }
 
 .pd-100 {
@@ -152,6 +157,9 @@ body {
   margin: 0;
   font-size: calc( 0.004375 * 100vw + 11.6px );
 }
+.basement__block .basement__col .logFooter {
+  color: transparent;
+}
 .basement__block .basement__col .logFooter .login,
 .basement__block .basement__col .logFooter .register {
   background-color: white;
@@ -197,6 +205,9 @@ body {
 }
 .basement__content .d-col .basement__logo {
   font-size: calc( 0.00625 * 100vw + 28px );
+  -webkit-text-fill-color: white;
+}
+.basement__content .d-col .basement__logo span {
   -webkit-text-fill-color: white;
 }
 .basement__content .d-col .block .prava {
