--- a/header/header.css
+++ b/header/header.css
@@ -67,7 +67,12 @@ header .headerTop__logo {
   -webkit-text-fill-color: transparent;
   color: #5134c4;
   font-family: "fouore";
-  font-size: calc( 0.00625 * 100vw + 28px );
+  font-size: calc( 0.009375 * 100vw + 27px );
+}
+header .headerTop__logo span {
+  -webkit-text-fill-color: black;
+  color: black;
+  font-size: calc( 0.00375 * 100vw + 10.8px );
 }
 
 header .services .sidebar__menu .sidebar__row a .iconMenu, header .services .sidebar__open, header .services a:nth-child(1) .menu {
@@ -166,6 +171,17 @@ header {
 header .headerTop {
   padding: 0 calc( 0.121875 * 100vw + -34px ) calc( 0.004375 * 100vw + 6.6px );
   border-bottom: 1px solid #ececec;
+}
+header .headerTop__logotip {
+  display: flex;
+  flex-direction: row;
+  height: 100%;
+  width: calc( 0.009375 * 100vw + 42px );
+  margin: calc( 0.0025 * 100vw + 5.2px ) 15px 0 0;
+}
+header .headerTop__logotip img {
+  width: 100%;
+  max-height: 100%;
 }
 header .headerTop__logo {
   color: black;
@@ -366,13 +382,15 @@ header .services__fixed a:not(:first-child):hover:nth-child(6) {
   margin: 15px 0 25px auto;
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 1180px) {
   header .headerTop__search {
     display: none;
   }
   header .headerTop__contacts {
     margin-left: auto;
   }
+}
+@media (max-width: 1024px) {
   header .services a:nth-child(2),
 header .services a:nth-child(3),
 header .services a:nth-child(4),
